--- a/global/prometheus-kubernetes/values.yaml
+++ b/global/prometheus-kubernetes/values.yaml
@@ -4,7 +4,7 @@ global:
 
 # Values for global kubernetes Prometheus.
 prometheus-kubernetes-global:
-  name: k8s-global
+  name: kubernetes-global
 
   retentionTime: 90d
 
@@ -37,7 +37,7 @@ prometheus-kubernetes-global:
 
 # Basic alerts for global Prometheus.
 alerts:
-  prometheus: k8s-global
+  prometheus: kubernetes-global
 
 # List of regions to which the prometheus-kubernetes is deployed.
 regionList:
