--- a/global/prometheus-openstack/values.yaml
+++ b/global/prometheus-openstack/values.yaml
@@ -4,7 +4,7 @@ global:
 
 # Values for global OpenStack Prometheus.
 prometheus-openstack-global:
-  name: os-global
+  name: openstack-global
 
   retentionTime: 90d
 
@@ -37,7 +37,7 @@ prometheus-openstack-global:
 
 # Basic alerts for global Prometheus.
 alerts:
-  prometheus: os-global
+  prometheus: openstack-global
 
 # List of regions to which the prometheus-openstack is deployed.
 regionList:
