--- a/system/prometheus-server/templates/ingress.yaml
+++ b/system/prometheus-server/templates/ingress.yaml
@@ -9,6 +9,11 @@ metadata:
   annotations:
     vice-president: {{ default true .Values.ingress.vice_president | quote }}
     disco: {{ default true .Values.ingress.disco | quote }}
+    {{- if .Values.ingress.authentication.enabled}}
+    ingress.kubernetes.io/auth-tls-secret: {{ required ".Values.ingress.authentication.authTLSSecret missing" .Values.ingress.authentication.authTLSSecret | quote }}
+    ingress.kubernetes.io/auth-tls-verify-depth: {{ required ".Values.ingress.authentication.authTLSVerifyDepth missing" .Values.ingress.authentication.authTLSVerifyDepth | quote }}
+    ingress.kubernetes.io/auth-tls-verify-client: {{ required ".Values.ingress.authentication.authTLSVerifyClient missing" .Values.ingress.authentication.authTLSVerifyClient | quote }}
+    {{ end }}
     {{- if .Values.ingress.annotations }}
 {{ toYaml .Values.ingress.annotations | indent 4 }}
     {{ end }}
