--- a/system/prometheus-server/values.yaml
+++ b/system/prometheus-server/values.yaml
@@ -71,7 +71,19 @@ ingress:
   # Automate DNS management via disco.
   disco: true
 
-  # Additional annotations for ingress.
+  # Client certificate authentication on ingress level.
+  authentication:
+    enabled: true
+    # The key (<namespace>/<name>) of the secret containing the CA certificate (`ca.crt`) that is enabled to authenticate against this Ingress.
+    authTLSSecret: kube-system/ingress-cacrt
+
+    # The validation depth between the provided client certificate and the certification authority chain.
+    authTLSVerifyDepth: 3
+
+    # Enables verification of client certificates.
+    authTLSVerifyClient: on
+
+  # Additional annotations for the ingress.
   annotations: {}
 
 # Enable persistent storage.
