--- a/openstack/prometheus-openstack/values.yaml
+++ b/openstack/prometheus-openstack/values.yaml
@@ -27,9 +27,11 @@ openstack-prometheus:
       cpu: 10m
       memory: 10Gi
 
+  rbac:
+    create: true
+
   serviceAccount:
-    create: false
-    name: default
+    create: true
 
   serviceDiscoveries:
     endpoints:
