--- a/system/kube-monitoring/values.yaml
+++ b/system/kube-monitoring/values.yaml
@@ -140,6 +140,7 @@ kube-state-metrics:
     prometheus.io/scrape: "true"
     prometheus.io/port: "8080"
     prometheus.io/port_1: "8081"
+    prometheus.io/targets: "kubernetes,openstack"
 
   image:
     repository: sapcc/kube-state-metrics
