--- a/global/supernova/templates/ingress.yaml
+++ b/global/supernova/templates/ingress.yaml
@@ -21,6 +21,7 @@ metadata:
     ingress.kubernetes.io/auth-tls-verify-depth: "1"
     {{- end }}
     vice-president: {{ default false .Values.ingress.vice_president | quote }}
+    ingress.kubernetes.io/affinity: "cookie"
 spec:
   tls:
      - secretName: supernova
