--- a/global/concourse/values.yaml
+++ b/global/concourse/values.yaml
@@ -11,7 +11,7 @@ worker:
 
 concourse:
   image: concourse/concourse
-  imageTag: "5.0.1"
+  imageTag: "5.1.0"
   pullPolicy: IfNotPresent
 
   concourse:
@@ -68,6 +68,7 @@ concourse:
       workDir: /concourse-work-dir
 
   web:
+    enabled: true
     replicas: 1
 
     resources:
@@ -79,7 +80,7 @@ concourse:
       enabled: false
 
   worker:
-    replicas: 0
+    enabled: false
 
   persistence:
     enabled: false
