--- a/global/concourse/templates/worker-daemonset.yaml
+++ b/global/concourse/templates/worker-daemonset.yaml
@@ -226,7 +226,7 @@ spec:
             path: sap-root-certs.crt
       - name: concourse-keys
         secret:
-          secretName: {{ template "concourse.concourse.fullname" $ }}
+          secretName: concourse-web
           defaultMode: 0400
           items:
           - key: host-key-pub
@@ -237,7 +237,7 @@ spec:
             path: worker_key.pub
       - name: worker-keys
         secret:
-          secretName: {{ template "concourse.concourse.fullname" $ }}-worker
+          secretName: concourse-worker
           defaultMode: 0400
           items:
           - key: {{ .name }}-team-authorized-key
