--- a/global/concourse/templates/worker-secrets.yaml
+++ b/global/concourse/templates/worker-secrets.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ template "concourse.concourse.fullname" . }}-worker
+  name: concourse-worker
   labels:
-    app: {{ template "concourse.concourse.fullname" . }}-worker
+    app: concourse-worker
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
