Fix concourse secrets

--- a/global/concourse/templates/worker-secrets.yaml
+++ b/global/concourse/templates/worker-secrets.yaml
@@ -9,6 +9,9 @@ metadata:
     heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
+  host-key-pub: {{ .Values.concourse.secrets.hostKeyPub | b64enc | quote }}
+  worker-key: {{ .Values.concourse.secrets.workerKey | b64enc | quote }}
+  worker-key-pub: {{ .Values.concourse.secrets.workerKeyPub | b64enc | quote }}
   {{- range .Values.concourse.secrets.teamAuthorizedKeys}}
   {{ .team }}-team-authorized-key: {{ .key | b64enc | quote }}
   {{ .team }}-team-authorized-privkey: {{ .privKey | b64enc | quote }}
