use prometheus.fullName for resources

--- a/system/prometheus-server/templates/alertmanager-config.yaml
+++ b/system/prometheus-server/templates/alertmanager-config.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Secret
 
 metadata:
-  name: {{ include "prometheus.name" . }}-alertmanager-config
+  name: {{ include "prometheus.fullName" . }}-alertmanager-config
   labels:
     prometheus: {{ include "prometheus.name" . }}
 
