--- a/system/prometheus-server/templates/servicemonitors/prometheus.yaml
+++ b/system/prometheus-server/templates/servicemonitors/prometheus.yaml
@@ -2,7 +2,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 
 metadata:
-  name: {{ include "prometheus.name" . }}
+  name: {{ include "prometheus.fullName" . }}
   labels:
     prometheus: {{ include "prometheus.name" . }}
 
