--- a/system/prometheus-server/templates/podmonitors/pod-sd.yaml
+++ b/system/prometheus-server/templates/podmonitors/pod-sd.yaml
@@ -3,7 +3,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: PodMonitor
 
 metadata:
-  name: {{ include "prometheus.name" . }}-pod-sd
+  name: {{ include "prometheus.fullName" . }}-pod-sd
   labels:
     prometheus: {{ include "prometheus.name" . }}
 
