--- a/system/prometheus-server/templates/servicemonitors/endpoint-sd.yaml
+++ b/system/prometheus-server/templates/servicemonitors/endpoint-sd.yaml
@@ -3,7 +3,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 
 metadata:
-  name: {{ include "prometheus.name" . }}-endpoint-sd
+  name: {{ include "prometheus.fullName" . }}-endpoint-sd
   labels:
     prometheus: {{ include "prometheus.name" . }}
 
