[swift] prometheus util
use global context in rnage of proxies

--- a/openstack/swift/templates/proxy-service.yaml
+++ b/openstack/swift/templates/proxy-service.yaml
@@ -7,7 +7,7 @@ metadata:
     release: "{{$.Release.Name}}"
     os-cluster: {{$cluster.name}}
   annotations:
-    {{- include "swift_prometheus_annotations" . | indent 4 }}
+    {{- include "swift_prometheus_annotations" $ | indent 4 }}
 spec:
   selector:
     component: swift-proxy-{{$cluster.name}}
