support mounting additional secrets

--- a/system/prometheus-server/templates/prometheus-server.yaml
+++ b/system/prometheus-server/templates/prometheus-server.yaml
@@ -58,6 +58,12 @@ spec:
 {{ toYaml .Values.configMaps | indent 4 }}
   {{- end }}
 
+  {{ if .Values.secrets }}
+  # Mount additional configmaps from the same namespace.
+  secrets:
+{{ toYaml .Values.secrets | indent 4 }}
+  {{ end }}
+
   {{ if .Values.alertmanagers -}}
   # Alertmanager configuration.
   additionalAlertManagerConfigs:
