--- a/system/prometheus-server/values.yaml
+++ b/system/prometheus-server/values.yaml
@@ -47,6 +47,10 @@ scrapeInterval: "60s"
 configMaps: []
   # - < name of configmap >
 
+# List of secrets in the same namespace as the Prometheus that should be mounted to /etc/prometheus/secrets/<secret-name>.
+secrets: []
+# - < name of secret >
+
 # List of Alertmanagers (AM) to send alerts to.
 # If multiple AMs are used in HA, alerts must be send to every AM.
 alertmanagers: []
