--- a/global/prometheus-kubernetes/values.yaml
+++ b/global/prometheus-kubernetes/values.yaml
@@ -30,6 +30,9 @@ prometheus-kubernetes-global:
     endpoints:
       enabled: false
 
+  secrets:
+    - prometheus-sso-cert
+
   # Disable alerting until the transition to the operated Prometheus was done in all regions.
   # alertmanagers:
   #  - alertmanager.eu-de-1.cloud.sap
@@ -57,3 +60,10 @@ regionList:
   - "na-us-2"
   - "na-us-3"
   - "qa-de-1"
+
+# Regional Prometheis are only accessible after presenting a valid SSO certificate.
+authentication:
+  enabled: false
+  # Defined via secrets.
+  # ssoCert:
+  # ssoKey:
