temp disable alertmanagers

--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -12,8 +12,8 @@ prometheus_server:
   configMaps:
     - snmp-exporter-targets
 
-  alertmanagers:
-    - alertmanager.eu-de-1.cloud.sap
+  # alertmanagers:
+  #  - alertmanager.eu-de-1.cloud.sap
 
   ingress:
     enabled: true
