--- a/system/infra-monitoring/Chart.yaml
+++ b/system/infra-monitoring/Chart.yaml
@@ -1,3 +1,6 @@
-description: Infrastructure Monitoring and Metrics Collection
+apiVersion: v1
 name: infra-monitoring
 version: 1.0.0
+description: Prometheus Infrastructure Monitoring and Metrics Collection
+maintainers:
+  - name: Martin Vossen (D021500)
