enable sso for global prometheis

--- a/global/prometheus-kubernetes/values.yaml
+++ b/global/prometheus-kubernetes/values.yaml
@@ -22,14 +22,17 @@ prometheus-kubernetes-global:
     enabled: true
     size: 300Gi
 
+  rbac:
+    create: true
+
   serviceAccount:
-    create: false
-    name: default
+    create: true
 
   serviceDiscoveries:
     endpoints:
       enabled: false
 
+  # Comment the `prometheus-sso-cert` if SSO is not used (aka authentication.enabled=false)
   secrets:
     - prometheus-sso-cert
 
@@ -63,7 +66,7 @@ regionList:
 
 # Regional Prometheis are only accessible after presenting a valid SSO certificate.
 authentication:
-  enabled: false
+  enabled: true
   # Defined via secrets.
   # ssoCert:
   # ssoKey:
