--- a/global/prometheus-openstack/values.yaml
+++ b/global/prometheus-openstack/values.yaml
@@ -57,3 +57,10 @@ regionList:
   - "na-us-2"
   - "na-us-3"
   - "qa-de-1"
+
+# Regional Prometheis are only accessible after presenting a valid SSO certificate.
+authentication:
+  enabled: true
+  # Defined via secrets.
+  # ssoCert:
+  # ssoKey:
