--- a/global/prometheus-infra/values.yaml
+++ b/global/prometheus-infra/values.yaml
@@ -22,13 +22,13 @@ prometheus-infra-global:
     enabled: true
     size: 300Gi
 
-  serviceAccount:
-    create: false
-    name: default
-
   serviceDiscoveries:
     endpoints:
       enabled: false
+
+  # Comment the `prometheus-sso-cert` if SSO is not used (aka authentication.enabled=false)
+  secrets:
+    - prometheus-sso-cert
 
   # Disable alerting until the transition to the operated Prometheus was done in all regions.
   # alertmanagers:
@@ -42,3 +42,10 @@ alerts:
 # List of regions to which the prometheus-openstack is deployed.
 regionList:
   - "qa-de-1"
+
+# Regional Prometheis are only accessible after presenting a valid SSO certificate.
+authentication:
+  enabled: true
+  # Defined via secrets.
+  # ssoCert:
+  # ssoKey:
