fix prom federation sso

--- a/global/prometheus-openstack/values.yaml
+++ b/global/prometheus-openstack/values.yaml
@@ -22,13 +22,13 @@ prometheus-openstack-global:
     enabled: true
     size: 300Gi
 
-  serviceAccount:
-    create: false
-    name: default
-
   serviceDiscoveries:
     endpoints:
       enabled: false
+
+  # Comment the `prometheus-sso-cert` if SSO is not used (aka authentication.enabled=false)
+  secrets:
+    - prometheus-sso-cert
 
   # Disable alerting until the transition to the operated Prometheus was done in all regions.
   # alertmanagers:
