--- a/global/prometheus-kubernetes/values.yaml
+++ b/global/prometheus-kubernetes/values.yaml
@@ -47,6 +47,7 @@ alerts:
 
 # List of regions to which the prometheus-kubernetes is deployed.
 regionList:
+  - "admin"
   - "ap-au-1"
   - "ap-cn-1"
   - "ap-ae-1"
