fix thanos/openstack cross domain scoping

--- a/system/prometheus-server/templates/thanos/thanos-seed.yaml
+++ b/system/prometheus-server/templates/thanos/thanos-seed.yaml
@@ -11,7 +11,7 @@ spec:
     - monsoon3/domain-default-seed
 
   domains:
-    - name: {{ required ".Values.thanos.swiftStorageConfig.domainName missing" .Values.thanos.swiftStorageConfig.domainName }}
+    - name: {{ required ".Values.thanos.swiftStorageConfig.userDomainName missing" .Values.thanos.swiftStorageConfig.userDomainName }}
       users:
         - name: {{ required ".Values.thanos.swiftStorageConfig.userName missing" .Values.thanos.swiftStorageConfig.userName }}
           description: Thanos Service User
@@ -25,7 +25,7 @@ spec:
         - name: {{ required ".Values.thanos.swiftStorageConfig.tenantName missing" .Values.thanos.swiftStorageConfig.tenantName }}
           roles:
             # Permission to write to ccadmin/master containers.
-            - user: {{ required ".Values.thanos.swiftStorageConfig.userName missing" .Values.thanos.swiftStorageConfig.userName }}@{{ required ".Values.thanos.swiftStorageConfig.domainName missing" .Values.thanos.swiftStorageConfig.domainName }}
+            - user: {{ required ".Values.thanos.swiftStorageConfig.userName missing" .Values.thanos.swiftStorageConfig.userName }}@{{ required ".Values.thanos.swiftStorageConfig.userDomainName missing" .Values.thanos.swiftStorageConfig.userDomainName }}
               role: swiftoperator
           swift:
             containers:
