--- a/system/prometheus-server/values.yaml
+++ b/system/prometheus-server/values.yaml
@@ -134,6 +134,7 @@ thanos:
   swiftStorageConfig: {}
     # authURL:
     # userName:
+    # userDomainName:
     # password:
     # domainName:
     # tenantName:
@@ -147,7 +148,8 @@ thanos:
 
   # See https://github.com/coreos/prometheus-operator/blob/master/Documentation/api.md#thanosspec .
   spec:
-    baseImage: "improbable/thanos:v0.4.0-rc.1"
+    baseImage: "sapcc/thanos"
+    version: "v0.4.0-e697626a"
 
     objectStorageConfig:
       name: thanos-storage-config
