fix thanos image

--- a/system/prometheus-server/values.yaml
+++ b/system/prometheus-server/values.yaml
@@ -148,8 +148,7 @@ thanos:
 
   # See https://github.com/coreos/prometheus-operator/blob/master/Documentation/api.md#thanosspec .
   spec:
-    baseImage: "sapcc/thanos"
-    version: "v0.4.0-e697626a"
+    image: "sapcc/thanos:v0.4.0-e697626a"
 
     objectStorageConfig:
       name: thanos-storage-config
