--- a/system/prometheus-server/templates/thanos/thanos-seed.yaml
+++ b/system/prometheus-server/templates/thanos/thanos-seed.yaml
@@ -2,7 +2,9 @@
 apiVersion: "openstack.stable.sap.cc/v1"
 kind: OpenstackSeed
 metadata:
-  name: thanos-seed
+  name: {{ include "prometheus.fullName" . }}-thanos-seed
+  labels:
+    prometheus: {{ include "prometheus.name" . }}
 
 spec:
   requires:
