--- a/system/prometheus-server/values.yaml
+++ b/system/prometheus-server/values.yaml
@@ -151,6 +151,9 @@ thanos:
     image: "sapcc/thanos:v0.4.0-e697626a"
 
     objectStorageConfig:
+      # Note:
+      # The name of the secret specified below will be prefixed with `prometheus-<name>`
+      # to avoid multiple configurations with the same name.
       name: thanos-storage-config
       key: thanos.yaml
       optional: true
