--- a/system/prometheus-server/templates/thanos/prometheus-thanosCompactorService.yaml
+++ b/system/prometheus-server/templates/thanos/prometheus-thanosCompactorService.yaml
@@ -2,9 +2,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: thanos-compactor
+  name: {{ include "prometheus.fullName" . }}-thanos-compactor
   labels:
     app: thanos-compactor
+    prometheus: {{ include "prometheus.name" . }}
+
 spec:
   ports:
   - name: http
@@ -12,4 +14,5 @@ spec:
     targetPort: http
   selector:
     app: thanos-compactor
+    prometheus: {{ include "prometheus.name" . }}
 {{- end }}
