--- a/system/prometheus-server/templates/thanos/prometheus-thanosPeerService.yaml
+++ b/system/prometheus-server/templates/thanos/prometheus-thanosPeerService.yaml
@@ -2,9 +2,11 @@
 apiVersion: v1
 kind: Service
 metadata:
+  name: {{ include "prometheus.fullName" . }}-thanos-peers
   labels:
     thanos-peers: "true"
-  name: thanos-peers
+    prometheus: {{ include "prometheus.name" . }}
+
 spec:
   clusterIP: None
   ports:
@@ -16,5 +18,6 @@ spec:
     targetPort: http
   selector:
     thanos-peers: "true"
+    prometheus: {{ include "prometheus.name" . }}
   type: ClusterIP
 {{ end }}
