--- a/system/prometheus-server/templates/thanos/prometheus-thanosQueryService.yaml
+++ b/system/prometheus-server/templates/thanos/prometheus-thanosQueryService.yaml
@@ -2,9 +2,11 @@
 apiVersion: v1
 kind: Service
 metadata:
+  name: {{ include "prometheus.fullName" . }}-thanos-query
   labels:
     app: thanos-query
-  name: thanos-query
+    prometheus: {{ include "prometheus.name" . }}
+
 spec:
   ports:
   - name: http-query
@@ -12,4 +14,5 @@ spec:
     targetPort: http
   selector:
     app: thanos-query
+    prometheus: {{ include "prometheus.name" . }}
 {{ end }}
