--- a/system/prometheus-server/templates/thanos/prometheus-thanosStoreStatefulset.yaml
+++ b/system/prometheus-server/templates/thanos/prometheus-thanosStoreStatefulset.yaml
@@ -2,19 +2,23 @@
 apiVersion: apps/v1beta2
 kind: StatefulSet
 metadata:
-  name: thanos-store
+  name: {{ include "prometheus.fullName" . }}-thanos-store
+  prometheus: {{ include "prometheus.name" . }}
+
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: thanos
       thanos-peers: "true"
+      prometheus: {{ include "prometheus.name" . }}
   serviceName: thanos-store
   template:
     metadata:
       labels:
         app: thanos
         thanos-peers: "true"
+        prometheus: {{ include "prometheus.name" . }}
     spec:
       containers:
       - args:
@@ -28,7 +32,7 @@ spec:
           valueFrom:
             secretKeyRef:
               key: {{ required ".Values.thanos.spec.objectStorageConfig.key missing" .Values.thanos.spec.objectStorageConfig.key }}
-              name: {{ required ".Values.thanos.spec.objectStorageConfig.name missing" .Values.thanos.spec.objectStorageConfig.name }}
+              name: {{ include "thanos.objectStorageConfig.name" . }}
         image: {{ include "thanos.image" . }}
         name: thanos-store
         ports:
