--- a/system/prometheus-server/templates/thanos/thanos-config-secret.yaml
+++ b/system/prometheus-server/templates/thanos/thanos-config-secret.yaml
@@ -2,9 +2,10 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ required ".Values.thanos.spec.objectStorageConfig.name missing" .Values.thanos.spec.objectStorageConfig.name }}
+  name: {{ include "thanos.objectStorageConfig.name" . }}
   labels:
-    prometheus: openstack
+    prometheus: {{ include "prometheus.name" . }}
+
 data:
   {{ required ".Values.thanos.spec.objectStorageConfig.key missing" .Values.thanos.spec.objectStorageConfig.key }}: {{ include (print $.Template.BasePath  "/thanos/_thanos.yaml.tpl") . | b64enc }}
 {{ end }}
