--- a/system/kube-system/charts/dex/values.yaml
+++ b/system/kube-system/charts/dex/values.yaml
@@ -58,6 +58,9 @@ serviceAccount:
   # If not set and create is true, a name is generated using the fullname template
   name:
 
+# list of additional ca certificates that need to be available to dex (list of name: certificate)
+extraCAs: {}
+
 config:
   issuer: http://dex.io:8080
   storage:
