--- a/system/kube-system/charts/dex/templates/secret.yaml
+++ b/system/kube-system/charts/dex/templates/secret.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.ingress.ca }}
+{{- if or (.Values.ingress.ca) (ne (len .Values.extraCAs) 0) }}
 kind: Secret
 apiVersion: v1
 
@@ -10,7 +10,16 @@ metadata:
     heritage: "{{ .Release.Service }}"
     release: "{{ .Release.Name }}"
 data:
+{{- if .Values.ingress.ca }}
   ca.pem: {{ .Values.ingress.ca | b64enc }}
+{{- end }}
+{{- if ne (len .Values.extraCAs) 0 }}
+{{- with .Values.extraCAs }}
+{{- range $key, $value := . }}
+  {{ printf "%s: %s" $key ( $value | b64enc ) }}
+{{- end }}
+{{- end }}
+{{- end }}
 ---
 {{- end }}
 {{- if and .Values.ingress.enabled .Values.ingress.tls_crt }}
