fix sso cert path

--- a/global/prometheus-openstack/values.yaml
+++ b/global/prometheus-openstack/values.yaml
@@ -19,7 +19,7 @@ prometheus-openstack-global:
       disco/zone-name: "global.cloud.sap."
 
   persistence:
-    enabled: true
+    enabled: false
     size: 300Gi
 
   serviceDiscoveries:
@@ -28,7 +28,7 @@ prometheus-openstack-global:
 
   # Comment the `prometheus-sso-cert` if SSO is not used (aka authentication.enabled=false)
   secrets:
-    - prometheus-sso-cert
+    - prometheus-openstack-sso-cert
 
   # Disable alerting until the transition to the operated Prometheus was done in all regions.
   # alertmanagers:
