Add catalog endpoint for cloudshell

--- a/openstack/elektra/templates/seed.yaml
+++ b/openstack/elektra/templates/seed.yaml
@@ -25,6 +25,15 @@ spec:
   - monsoon3/domain-wbs-seed
   - monsoon3/domain-cc3test-seed
 
+  services:
+  - name: Webcli
+    type: webcli
+    description: 'A cloudshell for OpenStack'
+    endpoints:
+    - interface: public
+      region: '{{.Values.region}}'
+      url: https://ccloudshell.eu-de-2.cloud.sap
+
   roles:
   - cloud_compute_admin
   - cloud_network_admin
