fix thanos config name

--- a/system/prometheus-server/templates/prometheus-server.yaml
+++ b/system/prometheus-server/templates/prometheus-server.yaml
@@ -112,6 +112,12 @@ spec:
     {{- if not .Values.thanos.spec.peers }}
     peers: {{ include "thanos.peers" . }}
     {{ end }}
+    {{- if not .Values.thanos.spec.objectStorageConfig }}
+    objectStorageConfig:
+      name: {{ include "thanos.objectStorageConfig.name" . }}
+      key: {{ include "thanos.objectStorageConfig.key" . }}
+      optional: true
+    {{ end }}
 {{ toYaml .Values.thanos.spec | indent 4 }}
   {{- end -}}
 
