--- a/system/prometheus-server/templates/thanos/prometheus-thanosStoreStatefulset.yaml
+++ b/system/prometheus-server/templates/thanos/prometheus-thanosStoreStatefulset.yaml
@@ -31,7 +31,7 @@ spec:
         - name: OBJSTORE_CONFIG
           valueFrom:
             secretKeyRef:
-              key: {{ required ".Values.thanos.spec.objectStorageConfig.key missing" .Values.thanos.spec.objectStorageConfig.key }}
+              key: {{ include "thanos.objectStorageConfig.key" . }}
               name: {{ include "thanos.objectStorageConfig.name" . }}
         image: {{ include "thanos.image" . }}
         name: thanos-store
