--- a/system/prometheus-server/templates/thanos/thanos-config-secret.yaml
+++ b/system/prometheus-server/templates/thanos/thanos-config-secret.yaml
@@ -7,5 +7,5 @@ metadata:
     prometheus: {{ include "prometheus.name" . }}
 
 data:
-  {{ required ".Values.thanos.spec.objectStorageConfig.key missing" .Values.thanos.spec.objectStorageConfig.key }}: {{ include (print $.Template.BasePath  "/thanos/_thanos.yaml.tpl") . | b64enc }}
+  {{ include "thanos.objectStorageConfig.key" . }}: {{ include (print $.Template.BasePath  "/thanos/_thanos.yaml.tpl") . | b64enc }}
 {{ end }}
