fix snmp-exporter-service-discovery name

--- a/system/infra-monitoring/requirements.yaml
+++ b/system/infra-monitoring/requirements.yaml
@@ -26,9 +26,9 @@ dependencies:
     version: 1.0.0
     condition: snmp_exporter.enabled
 
-  - name: snmp-exporter-sd
+  - name: snmp-exporter-service-discovery
     alias: snmp_exporter_sd
-    repository: file://vendor/snmp-exporter-sd
+    repository: file://vendor/snmp-exporter-service-discovery
     version: 1.0.0
     condition: snmp_exporter_sd.enabled
 
