adding max ram to elk es-client and es-master deployments

--- a/openstack/elk/templates/es-client-deployment.yaml
+++ b/openstack/elk/templates/es-client-deployment.yaml
@@ -75,7 +75,7 @@ spec:
             - name: READONLYREST_ENABLE
               value: "true"
             - name: ES_JAVA_OPTS
-              value: "-XX:+UseG1GC -XX:MaxGCPauseMillis=300 -Xms10g -Xmx10g"
+              value: "-XX:MaxRAM=50g -XX:+UseG1GC -XX:MaxGCPauseMillis=300 -Xms10g -Xmx10g"
           volumeMounts:
             - mountPath: /es-bin
               name: es-bin
