--- a/openstack/elk/templates/es-master-deployment.yaml
+++ b/openstack/elk/templates/es-master-deployment.yaml
@@ -79,7 +79,7 @@ spec:
           - name: READONLYREST_ENABLE
             value: "false"
           - name: ES_JAVA_OPTS
-            value: "-XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=75 -XX:+UseCMSInitiatingOccupancyOnly -XX:MaxGCPauseMillis=5000 -Xms1g -Xmx1g"
+            value: "-XX:MaxRAM=50g -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=75 -XX:+UseCMSInitiatingOccupancyOnly -XX:MaxGCPauseMillis=5000 -Xms1g -Xmx1g"
         volumeMounts:
           - mountPath: /es-bin
             name: es-bin
