--- a/system/prometheus-server/values.yaml
+++ b/system/prometheus-server/values.yaml
@@ -156,7 +156,7 @@ thanos:
 
   # See https://github.com/coreos/prometheus-operator/blob/master/Documentation/api.md#thanosspec .
   spec:
-    image: "sapcc/thanos:v0.4.0-e697626a"
+    image: "sapcc/thanos:v0.4.0-3-gd763e32"
 
 # The labels to add to any time series or alerts when communicating with
 # external systems (federation, remote storage, Alertmanager).
