fix maia conf template

--- a/openstack/maia/templates/etc/_maia.conf
+++ b/openstack/maia/templates/etc/_maia.conf
@@ -2,7 +2,7 @@
 [maia]
 {{- if .Values.prometheus.enabled }}
 prometheus_url = "http://prometheus-maia:{{.Values.prometheus.listen_port}}"
-{{- else -}}
+{{- else }}
 prometheus_url = "http://prometheus-operated:9090"
 {{- end }}
 bind_address = "0.0.0.0:{{.Values.maia.listen_port}}"
