--- a/openstack/barbican/values.yaml
+++ b/openstack/barbican/values.yaml
@@ -170,3 +170,9 @@ vice_president: true
 # sapcc/openstack-watcher-middleware
 watcher:
   enabled: true
+
+# Deploy Barbican Prometheus alerts.
+alerts:
+  enabled: true
+  # Name of the Prometheus to which the alerts should be assigned to.
+  prometheus: openstack
