[Glance-Alerts] Moving alerts to prom-os

--- a/openstack/glance/values.yaml
+++ b/openstack/glance/values.yaml
@@ -219,3 +219,9 @@ nanny:
 # openstack-watcher-middleware
 watcher:
   enabled: true
+
+# Deploy Glance Prometheus alerts.
+alerts:
+  enabled: true
+  # Name of the Prometheus to which the alerts should be assigned to.
+  prometheus: openstack
