--- a/system/sentry/values.yaml
+++ b/system/sentry/values.yaml
@@ -72,3 +72,9 @@ redis:
     requests:
       memory: 10Gi
       cpu: 2
+
+# Deploy Sentry Prometheus alerts.
+alerts:
+  enabled: true
+  # Name of the Prometheus to which the alerts should be assigned to.
+  prometheus: openstack
