Fix region variable name

--- a/openstack/elektra/templates/seed.yaml
+++ b/openstack/elektra/templates/seed.yaml
@@ -31,7 +31,7 @@ spec:
     description: 'A cloudshell for OpenStack'
     endpoints:
     - interface: public
-      region: '{{.Values.region}}'
+      region: '{{.Values.monsoon_dashboard_region}}'
       url: https://ccloudshell.eu-de-2.cloud.sap
 
   roles:
