--- a/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
+++ b/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
@@ -162,7 +162,7 @@ data:
           - '{__name__=~"^skydns_.+"}'
           - '{__name__=~"^snmp_asa_cfwHardwareStatusValue"}'
           - '{__name__=~"^snmp_asr_.+"}'
-          - '{__name__=~"^snmp_arista_vlans_counted"}'
+          - '{__name__=~"^snmp_arista_.+"}'
           - '{__name__=~"^snmp_f5_.+"}'
           - '{__name__=~"^snmp_n7k_.+"}'          
           - '{__name__=~"^sql_openstack_.+"}'
@@ -206,6 +206,10 @@ data:
           target_label: __name__
           regex: aggregated:(.+)
           replacement: $1
+  
+        - source_labels: [__name__]
+          regex: 'snmp_arista_dot1qVlanFdbId'
+          action: drop
 
       static_configs:
         - targets:
