adding bios_exporter

--- a/system/infra-monitoring/requirements.yaml
+++ b/system/infra-monitoring/requirements.yaml
@@ -36,3 +36,8 @@ dependencies:
     repository: file://vendor/vcenter-service-discovery
     version: 1.0.0
     condition: vcenter-service-discovery.enabled
+
+  - name: bios-exporter
+    repository: file://vendor/bios-exporter
+    version: 1.0.0
+    condition: bios_exporter.enabled
