--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -68,5 +68,9 @@ snmp_exporter:
 
 snmp_exporter_sd:
   enabled: false
+
 vcenter-service-discovery:
   enabled: true
+
+bios_exporter:
+  enabled: false
