bios exporter needs to be found

--- a/system/infra-monitoring/requirements.yaml
+++ b/system/infra-monitoring/requirements.yaml
@@ -38,6 +38,7 @@ dependencies:
     condition: vcenter-service-discovery.enabled
 
   - name: bios-exporter
+    alias: bios_exporter
     repository: file://vendor/bios-exporter
     version: 1.0.0
     condition: bios_exporter.enabled
