[blackhole]: add clients credentials as a secret

--- a/global/blackhole/templates/deployment.yaml
+++ b/global/blackhole/templates/deployment.yaml
@@ -55,3 +55,13 @@ spec:
               exec:
                 #Give the ingress some time to reload its config
                 command: ["/bin/sh","-c","sleep 30"]
+          
+          volumeMounts:
+            - name: clients
+              mountPath: '/clients'
+              readOnly: true
+
+      volumes:   
+        - name: clients
+          secret:
+            secretName: clients
