[infra-monitoring] adds atlas dep

--- a/system/infra-monitoring/requirements.yaml
+++ b/system/infra-monitoring/requirements.yaml
@@ -42,3 +42,9 @@ dependencies:
     repository: file://vendor/bios-exporter
     version: 1.0.0
     condition: bios_exporter.enabled
+  
+  - name: atlas
+    alias: atlas
+    repository: file://vendor/atlas
+    version: 1.0.0
+    condition: atlas.enabled
