Add annotation for prometheus

--- a/global/concourse/values.yaml
+++ b/global/concourse/values.yaml
@@ -79,6 +79,10 @@ concourse:
     ingress:
       enabled: false
 
+    service:
+      annotations:
+        - prometheus.io/targets: "kubernetes"
+
   worker:
     enabled: false
 
