[blackhole,supernova]: disco: true

--- a/global/blackhole/templates/ingress.yaml
+++ b/global/blackhole/templates/ingress.yaml
@@ -5,6 +5,7 @@ metadata:
   annotations:
     ingress.kubernetes.io/affinity: "cookie"
     vice-president: "true"   
+    disco: "true"
 
 spec:
   tls:
