--- a/global/supernova/templates/ingress.yaml
+++ b/global/supernova/templates/ingress.yaml
@@ -22,6 +22,7 @@ metadata:
     {{- end }}
     vice-president: {{ default false .Values.ingress.vice_president | quote }}
     ingress.kubernetes.io/affinity: "cookie"
+    disco: "true"
 spec:
   tls:
      - secretName: supernova
