--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -11,6 +11,7 @@ prometheus_server:
     key: scrape-config.yaml
   configMaps:
     - snmp-exporter-targets
+    - atlas-targets
 
   # alertmanagers:
   #  - alertmanager.eu-de-1.cloud.sap
