[blackhole]: add env variable to database setup task

--- a/global/blackhole/templates/deployment.yaml
+++ b/global/blackhole/templates/deployment.yaml
@@ -35,6 +35,9 @@ spec:
               mountPath: '/clients'
               readOnly: true
           command: ["yarn", "setupdb"]
+          env:
+            - name: BLACKHOLE_DB_PASSWORD
+              valueFrom: { secretKeyRef:    { name: {{ template "postgresql.fullname" . }}, key: postgres-password } }
 
       containers:
         - name: blackhole
