add support for sso certs for datasources in grafanasix

--- a/openstack/grafanasix/templates/grafana-deployment.yaml
+++ b/openstack/grafanasix/templates/grafana-deployment.yaml
@@ -32,6 +32,9 @@ spec:
         - name: grafana-etc
           configMap:
             name: grafana-etc
+        - name: grafana-ds-certs
+          secret:
+            secretName: grafana-ds-certs
         - name: grafana-content
           emptyDir: {}
       containers:
@@ -55,6 +58,8 @@ spec:
               mountPath: /grafana-bin
             - name: grafana-etc
               mountPath: /grafana-etc
+            - name: grafana-ds-certs
+              mountPath: /grafana-ds-certs
             - name: grafana-content
               mountPath: /git
         - name: "gitsync"
