--- a/openstack/grafanasix/values.yaml
+++ b/openstack/grafanasix/values.yaml
@@ -110,3 +110,11 @@ nginx:
       public: '3001'
     host:
       public: '@/cc/secrets'
+
+# certs required for some datasources
+authentication:
+  enabled: true
+  # defined via secrets.
+  # ssoCert:
+  # ssoKey:
+  # caCert:
