--- a/global/blackhole/templates/deployment.yaml
+++ b/global/blackhole/templates/deployment.yaml
@@ -36,7 +36,9 @@ spec:
               readOnly: true
           command: ["yarn", "setupdb"]
           env:
-            - name: BLACKHOLE_DB_PASSWORD
+            - name: PGHOST
+              value: {{ template "postgresql.fullname" . }}
+            - name: PGPASSWORD
               valueFrom: { secretKeyRef:    { name: {{ template "postgresql.fullname" . }}, key: postgres-password } }
 
       containers:
