set sso to false by default for now for datasources

--- a/openstack/grafanasix/values.yaml
+++ b/openstack/grafanasix/values.yaml
@@ -113,7 +113,7 @@ nginx:
 
 # certs required for some datasources
 authentication:
-  enabled: true
+  enabled: false
   # defined via secrets.
   # ssoCert:
   # ssoKey:
