--- a/global/blackhole/templates/importers.yaml
+++ b/global/blackhole/templates/importers.yaml
@@ -35,9 +35,9 @@ spec:
               value: {{ .Values.region }}
             - name: ALERTS_API_ENDPOINT
               value: {{ .Values.alerts_api_endpoint }}
-            - name: BLACKHOLE_ENDPOINT
+            - name: IMPORTER_API_ENDPOINT
               value: blackhole
-            - name: BLACKHOLE_API_KEY
+            - name: IMPORTER_API_KEY
               value: {{ .Values.clients.coreImporter.key }}
-            - name: BLACKHOLE_API_SECRET
+            - name: IMPORTER_API_SECRET
               value: {{ .Values.clients.coreImporter.secret }}
