[blackhole]: load default client credentials

--- a/global/blackhole/templates/deployment.yaml
+++ b/global/blackhole/templates/deployment.yaml
@@ -32,7 +32,7 @@ spec:
           imagePullPolicy: {{.Values.image.pullPolicy}}
           volumeMounts:
             - name: clients
-              mountPath: '/home/app/api/clients'
+              mountPath: '/home/app/api/config/defaultClients'
               readOnly: true
           command: ["yarn", "setupdb"]
           env:
