--- a/global/blackhole/templates/deployment.yaml
+++ b/global/blackhole/templates/deployment.yaml
@@ -52,7 +52,7 @@ spec:
             - name: REGION
               value: {{ .Values.region }}
             - name: PGHOST  
-              value: {{ tVemplate "postgresql.fullname" . }}
+              value: {{ template "postgresql.fullname" . }}
             - name: PGPASSWORD
               valueFrom: { secretKeyRef:    { name: {{ template "postgresql.fullname" . }}, key: postgres-password } }
           livenessProbe:
