[blackhole]: bugfix in deployment.yaml

--- a/global/blackhole/templates/deployment.yaml
+++ b/global/blackhole/templates/deployment.yaml
@@ -37,7 +37,7 @@ spec:
           command: ["yarn", "setupdb"]
           env:
             - name: PGHOST
-              value: {{ tVemplate "postgresql.fullname" . }}
+              value: {{ template "postgresql.fullname" . }}
             - name: PGPASSWORD
               valueFrom: { secretKeyRef:    { name: {{ template "postgresql.fullname" . }}, key: postgres-password } }
 
