--- a/global/wham/templates/ingress.yaml
+++ b/global/wham/templates/ingress.yaml
@@ -13,6 +13,7 @@ metadata:
     annotations:
         vice-president: "true"
         disco: "true"
+        disco/zone-name: "ingress.{{ .Values.global.region }}.cloud.sap"
 
 spec:
   tls:
