option to disable collector-frontend pattern

--- a/system/kube-monitoring/values.yaml
+++ b/system/kube-monitoring/values.yaml
@@ -39,7 +39,9 @@ global:
 
   # Prometheus via operator.
   prometheus_operated:
-    enabled: true
+    # The Prometheus collector is only used in the bm controlplane to aggregate cpu metrics.
+    collector:
+      enabled: true
 
 # Values for operated Prometheus collector.
 # Only used if global.prometheus_operated.enabled: true.
