--- a/system/kube-monitoring/requirements.yaml
+++ b/system/kube-monitoring/requirements.yaml
@@ -20,11 +20,10 @@ dependencies:
   - name: prometheus-server
     alias: prometheus-collector-operated
     repository: https://charts.eu-de-2.cloud.sap
-    version: 1.0.18
-    condition: global.prometheus_operated.enabled
+    version: 1.1.6
+    condition: global.prometheus_operated.collector.enabled
 
   - name: prometheus-server
     alias: prometheus-frontend-operated
     repository: https://charts.eu-de-2.cloud.sap
-    version: 1.0.18
-    condition: global.prometheus_operated.enabled
+    version: 1.1.6
