--- a/system/kube-monitoring/templates/collector-scrape-config.yaml
+++ b/system/kube-monitoring/templates/collector-scrape-config.yaml
@@ -1,12 +1,12 @@
-{{- if .Values.global.prometheus_operated.enabled }}
+# If the Prometheus collector is not deployed the federatation configuration (frontend) is not deployed
+# and the configuration containing the service discoveries (collector) is used instead for the frontend.
 apiVersion: v1
 kind: Secret
 
 metadata:
-  name: k8s-collector-additional-scrape-config
+  name: k8s-{{ if .Values.global.prometheus_operated.collector.enabled }}collector{{ else }}frontend{{ end }}-additional-scrape-config
   labels:
-    prometheus: collector-kubernetes
+    prometheus: {{ if .Values.global.prometheus_operated.collector.enabled }}collector-kubernetes{{ else }}kubernetes{{ end }}
 
 data:
   scrape-config.yaml: {{ include (print $.Template.BasePath  "/_collector-prometheus.yaml.tpl") . | b64enc }}
-{{- end }}
