--- a/system/kube-monitoring/templates/frontend-scrape-config.yaml
+++ b/system/kube-monitoring/templates/frontend-scrape-config.yaml
@@ -1,4 +1,6 @@
-{{- if .Values.global.prometheus_operated.enabled }}
+{{- if .Values.global.prometheus_operated.collector.enabled }}
+# Configuration only required for Prometheus collector - frontend federation.
+# Do not deploy when collector is not enabled.
 apiVersion: v1
 kind: Secret
 
@@ -9,4 +11,4 @@ metadata:
 
 data:
   scrape-config.yaml: {{ include (print $.Template.BasePath  "/_frontend-prometheus.yaml.tpl") . | b64enc }}
-{{- end }}
+{{ end }}
