update infra-monitoring alerts

--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -41,6 +41,10 @@ prometheus_server:
     create: false
     name: default
 
+  # Basic alerts for infra Prometheus.
+  alerts:
+    prometheus: prometheus-infra
+
   # The log level of the Prometheus.
   logLevel: info
 
