--- a/system/infra-monitoring/templates/alerts.yaml
+++ b/system/infra-monitoring/templates/alerts.yaml
@@ -1,4 +1,4 @@
-{{- $values := .Values }}
+{{- $values := .Values.prometheus_server }}
 {{- range $path, $bytes := .Files.Glob "alerts/*.alerts" }}
 ---
 apiVersion: monitoring.coreos.com/v1
