dex: api version downgrades

--- a/system/kube-system/charts/dex/templates/deployment.yaml
+++ b/system/kube-system/charts/dex/templates/deployment.yaml
@@ -1,6 +1,6 @@
 {{ $fullname := include "dex.fullname" . }}
 
-apiVersion: apps/v1beta2
+apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: {{ template "dex.fullname" . }}
