--- a/system/kube-system/charts/dex/templates/ingress.yaml
+++ b/system/kube-system/charts/dex/templates/ingress.yaml
@@ -12,6 +12,7 @@ metadata:
     release: "{{ .Release.Name }}"
   annotations:
     vice-president: {{ default false .Values.ingress.vice_president | quote }}
+    disco: {{ default false .Values.ingress.disco | quote }}
 {{- with .Values.ingress.annotations }}
 {{ toYaml . | indent 4 }}
 {{- end }}
