add an option to sync the netron cache for bare metal nodes as well - this is now supported by the nova nanny

--- a/openstack/nova/templates/nanny-deployment.yaml
+++ b/openstack/nova/templates/nanny-deployment.yaml
@@ -225,6 +225,8 @@ spec:
               value: {{ .Values.sync_neutron_cache.dry_run | quote }}
             - name: NOVA_SYNC_NEUTRON_CACHE_INTERVAL
               value: {{ .Values.sync_neutron_cache.interval | quote }}
+            - name: NOVA_SYNC_NEUTRON_CACHE_BAREMETAL
+              value: {{ .Values.sync_neutron_cache.baremetal | quote }}
             - name: NOVA_CELL2_ENABLED
               value: "false"
           volumeMounts:
