--- a/openstack/nova/values.yaml
+++ b/openstack/nova/values.yaml
@@ -660,6 +660,8 @@ sync_neutron_cache:
   dry_run: True
   # run the db cleanup every n minutes
   interval: 360
+  # sync the neutron cache for bare metal nodes as well?
+  baremetal: false
 
 # openstack-watcher-middleware
 watcher:
