[swift] get value from global scope
//cc @majewsky

--- a/openstack/swift/templates/memcached-service.yaml
+++ b/openstack/swift/templates/memcached-service.yaml
@@ -9,7 +9,7 @@ metadata:
   annotations:
     prometheus.io/scrape: "true"
     prometheus.io/port: "9150"
-    prometheus.io/targets: {{ .Values.alerts.prometheus | quote }}
+    prometheus.io/targets: {{ $.Values.alerts.prometheus | quote }}
 
 spec:
   selector:
