--- a/openstack/swift/values.yaml
+++ b/openstack/swift/values.yaml
@@ -68,6 +68,12 @@ sentry:
 resources:
   enabled: true
 
+# Deploy Swift Prometheus alerts.
+alerts:
+  enabled: false
+  # Name of the Prometheus to which the alerts should be assigned to.
+  prometheus: openstack
+
 # If the swift cluster is shared across multiple openstack clusters, one can
 # start multiple proxy deployments connecting to the different keystone backends
 clusters:
@@ -116,9 +122,3 @@ clusters:
 account_ring_base64: DEFINED_IN_REGION_CHART
 container_ring_base64: DEFINED_IN_REGION_CHART
 object_ring_base64: DEFINED_IN_REGION_CHART
-
-# Deploy Swift Prometheus alerts.
-alerts:
-  enabled: true
-  # Name of the Prometheus to which the alerts should be assigned to.
-  prometheus: openstack
