[swift] Enable alrts

--- a/openstack/swift/values.yaml
+++ b/openstack/swift/values.yaml
@@ -70,7 +70,7 @@ resources:
 
 # Deploy Swift Prometheus alerts.
 alerts:
-  enabled: false
+  enabled: true
   # Name of the Prometheus to which the alerts should be assigned to.
   prometheus: openstack
 
