fix $.Values reference

--- a/openstack/limes/templates/collect-deployment.yaml
+++ b/openstack/limes/templates/collect-deployment.yaml
@@ -27,7 +27,7 @@ spec:
         prometheus.io/scrape: "true"
         prometheus.io/port: "8080"
         # The `openstack` Prometheus shall scrape metrics of OpenStack services.
-        prometheus.io/targets: {{ required ".Values.alerts.prometheus missing" $values.alerts.prometheus | quote }}
+        prometheus.io/targets: {{ required ".Values.alerts.prometheus missing" $.Values.alerts.prometheus | quote }}
     spec:
       volumes:
         - name: config
