[infra-monitoring] adds ironic-exporter to infra pipeline (to be rm from kube-monitoring)

--- a/system/infra-monitoring/requirements.yaml
+++ b/system/infra-monitoring/requirements.yaml
@@ -42,6 +42,11 @@ dependencies:
     repository: file://vendor/bios-exporter
     version: 1.0.0
     condition: bios_exporter.enabled
+
+  - name: ironic-exporter
+    repository: file://vendor/ironic-exporter
+    version: 1.0.0
+    condition: ironic-exporter.enabled
   
   - name: atlas
     alias: atlas
