[tempest] Update designate tempest seed.

--- a/openstack/tempest/designate-tempest/templates/seed.yaml
+++ b/openstack/tempest/designate-tempest/templates/seed.yaml
@@ -1,7 +1,7 @@
 apiVersion: "openstack.stable.sap.cc/v1"
 kind: "OpenstackSeed"
 metadata:
-  name: designate-seed
+  name: {{ .Chart.Name }}-seed
   labels:
     component: designate
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
