[wham] adds scaleout to disco url

--- a/global/wham/templates/ingress.yaml
+++ b/global/wham/templates/ingress.yaml
@@ -13,7 +13,7 @@ metadata:
     annotations:
         vice-president: "true"
         disco: "true"
-        disco/record: "ingress.{{ .Values.global.region }}.cloud.sap"
+        disco/record: "ingress.scaleout.{{ .Values.global.region }}.cloud.sap"
 
 spec:
   tls:
