disable vcenter-service-discovery deployment per default

--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -80,7 +80,7 @@ snmp_exporter_sd:
   enabled: false
 
 vcenter-service-discovery:
-  enabled: true
+  enabled: false
 
 bios_exporter:
   enabled: false
