[alertmanager] updates wham alert handler url

--- a/global/prometheus-alertmanager/templates/config.yaml
+++ b/global/prometheus-alertmanager/templates/config.yaml
@@ -297,7 +297,7 @@ data:
     # ---- custom webhook handlers ----
     - name: wham_metal
       webhook_configs:
-        - url: "https://wham.eu-de-1.cloud.sap/alerts/metal"
+        - url: "https://wham.scaleout.eu-de-1.cloud.sap/alerts/metal"
 
     # ---- Slack Duty (Alert)Channels ----
     # slack duty metal
